--- a/env.example
+++ b/env.example
@@ -9,3 +9,8 @@ POSTGRES_DB=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_HOST=db
+
+DJANGO_SECRET_KEY=
+FIELD_ENCRYPTION_KEYS=
+ROOT_EXT_KEY=
+
